# civic-agent-kit

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/civic_agent_kit/: __init__.py  agents.py  data.py  utils.py
tests/: test_smoke.py
