[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "civic-agent-kit"
version = "0.1.0"
description = "Python SDK for building civic AI tools in East Africa — parliament, budgets, drought, M-Pesa, MCP and A2A"
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
license-files = ["LICENSE"]
authors = [{name = "Gabriel Mahia", email = "contact@aikungfu.dev"}]
keywords = [
    "kenya", "africa", "civic-tech", "mcp", "a2a", "parliament",
    "budget", "east-africa", "ai", "agent", "llm", "mpesa"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp   = ["mcp>=1.0.0"]
a2a   = ["a2a-sdk[http-server]>=0.3.26", "uvicorn>=0.29.0"]
agents = ["crewai>=0.70.0", "anthropic>=0.28.0"]
rag   = ["llama-index>=0.10.0", "llama-index-core>=0.10.0"]
all   = ["civic-agent-kit[mcp,a2a,agents,rag]"]

[project.urls]
Homepage = "https://github.com/gabrielmahia/civic-agent-kit"
Repository = "https://github.com/gabrielmahia/civic-agent-kit"
PyPI = "https://pypi.org/project/civic-agent-kit/"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
